; Generate default file containing DB URIs to test against, if not present.

(rule
  (targets uris.conf)
  (mode fallback)
  (action (write-file %{targets} "sqlite3:test.db?busy_timeout=60000\n")))

; The generic testsuite as a library.

(library
  (name testsuite)
  (wrapped false)
  (modules test_error_cause test_failure test_parallel test_param test_sql)
  (libraries caqti caqti.platform ptime.clock.os testlib))

; Instantiations of the testsuite.

(executable
  (name main_blocking)
  (modules main_blocking)
  (libraries
    caqti caqti.blocking caqti-dynload
    alcotest testlib testlib_blocking testsuite))

(rule
  (alias runtest)
  (package caqti-dynload)
  (deps (:test main_blocking.exe) (alias drivers) uris.conf)
  (locks /db/testsuite)
  (action (setenv OCAMLPATH . (run %{test}))))

(executable
  (name main_async)
  (modules main_async)
  (libraries
    caqti caqti.platform caqti-dynload caqti-async
    alcotest-async testlib testlib_async testsuite))

(rule
  (alias runtest)
  (package caqti-async)
  (deps (:test main_async.exe) (alias drivers) uris.conf)
  (locks /db/testsuite)
  (action (setenv OCAMLPATH . (run %{test}))))

(executable
  (name main_lwt)
  (modules main_lwt)
  (libraries
    caqti caqti.platform caqti-dynload caqti-lwt
    alcotest-lwt testlib testlib_lwt testsuite))

(rule
  (alias runtest)
  (package caqti-lwt)
  (deps (:test main_lwt.exe) (alias drivers) uris.conf)
  (locks /db/testsuite)
  (action (setenv OCAMLPATH . (run %{test}))))

; Fake META files for dynamic linking of drivers.

(alias (name drivers))

(alias
  (name drivers)
  (package caqti)
  (deps
    META.caqti
    %{cma:../caqti/lib/caqti}
    ../caqti/lib/caqti.cmxs))
(rule
  (targets META.caqti)
  (deps (:first-dep ../META.caqti))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-mariadb)
  (deps
    (:first-dep META.caqti-driver-mariadb)
    %{cma:../caqti-driver-mariadb/lib/caqti_driver_mariadb}
    ../caqti-driver-mariadb/lib/caqti_driver_mariadb.cmxs))
(rule
  (targets META.caqti-driver-mariadb)
  (deps (:first-dep ../META.caqti-driver-mariadb))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-mariadb/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-sqlite3)
  (deps
    META.caqti-driver-sqlite3
    %{cma:../caqti-driver-sqlite3/lib/caqti_driver_sqlite3}
    ../caqti-driver-sqlite3/lib/caqti_driver_sqlite3.cmxs))
(rule
  (targets META.caqti-driver-sqlite3)
  (deps (:first-dep ../META.caqti-driver-sqlite3))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-sqlite3/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-postgresql)
  (deps
    META.caqti-driver-postgresql
    %{cma:../caqti-driver-postgresql/lib/caqti_driver_postgresql}
    ../caqti-driver-postgresql/lib/caqti_driver_postgresql.cmxs))
(rule
  (targets META.caqti-driver-postgresql)
  (deps (:first-dep ../META.caqti-driver-postgresql))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-postgresql/lib\"\n")
      (cat %{first-dep})))))

(alias
  (name drivers)
  (package caqti-driver-pgx)
  (deps
    META.caqti-driver-pgx
    %{cma:../caqti-driver-pgx/lib/caqti_driver_pgx}
    ../caqti-driver-pgx/lib/caqti_driver_pgx.cmxs))
(rule
  (targets META.caqti-driver-pgx)
  (deps (:first-dep ../META.caqti-driver-pgx))
  (action
   (with-stdout-to %{targets}
    (progn
      (echo "directory = \"../caqti-driver-pgx/lib\"\n")
      (cat %{first-dep})))))
