(rule (copy# ../../shared/postgresql_conv.ml postgresql_conv.ml))

(library
 (name caqti_driver_pgx)
 (public_name caqti-driver-pgx)
 (enabled_if (>= %{ocaml_version} "4.10"))
 (library_flags (:standard -linkall))
 (libraries caqti caqti.platform domain-name ipaddr pgx))

(plugin
 (package caqti-driver-pgx)
 (name caqti-driver-pgx)
 (libraries caqti-driver-pgx)
 (site (caqti plugins)))
