(rule (copy# ../../shared/postgresql_conv.ml postgresql_conv.ml))

(library
 (name caqti_driver_postgresql)
 (public_name caqti-driver-postgresql)
 (flags (:standard -alert -caqti_unstable))
 (library_flags (:standard -linkall))
 (libraries caqti caqti.platform caqti.platform.unix postgresql))

(plugin
 (package caqti-driver-postgresql)
 (name caqti-driver-postgresql)
 (libraries caqti-driver-postgresql)
 (site (caqti plugins)))
