(test
 (name test_postgresql)
 (package caqti-driver-postgresql)
 (flags (:standard -alert -caqti_unstable))
 (libraries
    alcotest
    caqti
    caqti.blocking
    caqti-driver-postgresql
    testlib
    testlib_blocking)
 (deps ../../testsuite/uris.conf)
 (action
  (setenv CAQTI_TEST_URIS_FILE ../../testsuite/uris.conf
   (run %{test}))))
