(library
 (name caqti_driver_sqlite3)
 (public_name caqti-driver-sqlite3)
 (flags (:standard -thread -alert -caqti_unstable))
 (library_flags (:standard -linkall))
 (libraries caqti caqti.platform caqti.platform.unix sqlite3))

(plugin
 (package caqti-driver-sqlite3)
 (name caqti-driver-sqlite3)
 (libraries caqti-driver-sqlite3)
 (site (caqti plugins)))

(rule
 (enabled_if (>= %{version:sqlite3} 5.2.0))
 (action (copy# sqlite3_shim.5.2.ml sqlite3_shim.ml)))
(rule
 (enabled_if (< %{version:sqlite3} 5.2.0))
 (action (copy# sqlite3_shim.fallback.ml sqlite3_shim.ml)))
