(test
 (name test_sqlite3)
 (package caqti-driver-sqlite3)
 (libraries
    alcotest
    caqti
    caqti.blocking
    caqti-driver-sqlite3
    testlib
    testlib_blocking)
 (deps ../../testsuite/uris.conf)
 (locks /db/testsuite)
 (action
  (setenv CAQTI_TEST_URIS_FILE ../../testsuite/uris.conf
   (run %{test}))))
