(library
 (name caqti_mirage)
 (public_name caqti-mirage)
 (libraries
    caqti
    caqti.platform
    caqti-lwt
    caqti-tls
    dns-client
    dns-client-mirage
    domain-name
    ipaddr
    logs
    logs.lwt
    lwt
    mirage-channel
    mirage-clock
    mirage-random
    mirage-time
    tcpip
    tls-mirage))
