(library
 (public_name caqti-tls-async)
 (name caqti_tls_async)
 (optional)
 (preprocess (pps ppx_jane))
 (library_flags (:standard -linkall))
 (libraries
    async_kernel
    caqti
    caqti-async
    caqti-tls
    tls
    tls-async))

(plugin
 (package caqti-tls-async)
 (name caqti-tls-async)
 (libraries caqti-tls-async)
 (site (caqti plugins)))
